--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "KobraScript",
+  "name": "kobrascript",
   "version": "1.8.0",
   "description": "A compiler for the KobraScript language",
   "dependencies": {
