Do js code gen at entity level
This makes it recursive i.e. replacing the current jsgenerator, more
intuitive approach and it fixes a bug with printing functions within
objects.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "byline": "latest",
     "hashmap": "latest",
+    "js-beautify": "^1.5.10",
     "minimist": "latest"
   },
   "main": "./kobrac.js",
